include PROTOBUF_INCLUDE_DIR directories

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,9 +26,9 @@ message(DEBUG "CMAKE_CURRENT_BINARY_DIR: ${CMAKE_CURRENT_BINARY_DIR}")
 message(DEBUG "Python3_VERSION: ${Python3_VERSION}")
 message(DEBUG "Python3_EXECUTABLE: ${Python3_EXECUTABLE}")
 
-file(GLOB ALL_PROTOBUF_FILES *.proto)
+INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})
 
-#set(AMADB_GENERATED_PY_PROTOS "")
+file(GLOB ALL_PROTOBUF_FILES *.proto)
 list(APPEND AMADB_PROTOBUF_FILES
   amadb.proto
   hash.proto
