add CMAKE_CURRENT_SOURCE_DIR to INCLUDE_DIRECTORIES

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ message(DEBUG "CMAKE_CURRENT_BINARY_DIR: ${CMAKE_CURRENT_BINARY_DIR}")
 message(DEBUG "Python3_VERSION: ${Python3_VERSION}")
 message(DEBUG "Python3_EXECUTABLE: ${Python3_EXECUTABLE}")
 
-INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})
+INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 
 list(APPEND AMADB_PROTOBUF_FILES
   amadb.proto
