update CMake file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,9 +40,9 @@ if(CMAKE_BUILD_AMADB_PROTO)
   list(APPEND AMADB_GENERATED_PY_PROTOS ${AMADB_PY_PROTO})
 endif()
 
-if(CMAKE_BUILD_AMADB_PROTO)
-  message(STATUS "AMADB_GENERATED_PY_PROTOS: ${AMADB_GENERATED_PY_PROTOS}")
-  add_custom_target(amadb_pyprotos ALL
-    DEPENDS ${AMADB_GENERATED_PY_PROTOS}
-  )
+#if(CMAKE_BUILD_AMADB_PROTO)
+#  message(STATUS "AMADB_GENERATED_PY_PROTOS: ${AMADB_GENERATED_PY_PROTOS}")
+#  add_custom_target(amadb_pyprotos ALL
+#    DEPENDS ${AMADB_GENERATED_PY_PROTOS}
+#  )
 endif()
