update CMake file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,12 +19,12 @@ find_package(Protobuf REQUIRED)
 find_package(Python3  COMPONENTS Interpreter REQUIRED)
 
 # enviroment information
-message(DEBUG "PROJECT_VERSION: ${CMAKE_PROJECT_VERSION}")
-message(DEBUG "CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}")
+message(DEBUG "CMAKE_BUILD_AMADB_PROTO: ${CMAKE_BUILD_AMADB_PROTO}")
+message(DEBUG "CMAKE_BUILD_AMACONSOLE_PROTO: ${CMAKE_BUILD_AMACONSOLE_PROTO}")
+message(DEBUG "CMAKE_BUILD_AMAPROCESSOR_PROTO: ${CMAKE_BUILD_AMAPROCESSOR_PROTO}")
+message(DEBUG "CMAKE_BUILD_AMACONTROLLER_PROTO: ${CMAKE_BUILD_AMACONTROLLER_PROTO}")
 message(DEBUG "CMAKE_CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}")
 message(DEBUG "CMAKE_CURRENT_BINARY_DIR: ${CMAKE_CURRENT_BINARY_DIR}")
-message(DEBUG "Python3_VERSION: ${Python3_VERSION}")
-message(DEBUG "Python3_EXECUTABLE: ${Python3_EXECUTABLE}")
 
 INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 
@@ -38,10 +38,8 @@ list(APPEND AMADB_PROTOBUF_FILES
 if(CMAKE_BUILD_AMADB_PROTO)
   protobuf_generate_python(AMADB_PY_PROTO ${AMADB_PROTOBUF_FILES})
   list(APPEND AMADB_GENERATED_PY_PROTOS ${AMADB_PY_PROTO})
-endif()
 
-if(CMAKE_BUILD_AMADB_PROTO)
-  message(STATUS "AMADB_GENERATED_PY_PROTOS: ${AMADB_GENERATED_PY_PROTOS}")
+  message(DEBUG "AMADB_GENERATED_PY_PROTOS: ${AMADB_GENERATED_PY_PROTOS}")
   add_custom_target(amadb_pyprotos ALL
     DEPENDS ${AMADB_GENERATED_PY_PROTOS}
   )
