remove type (replace CMAKE_EXECUTABLE by CMAKE_COMMAND)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,7 +73,7 @@ if(CMAKE_BUILD_AMADB_PROTO)
   if(EXISTS ${AMADB_PROTO_DESTINATION})
     foreach(GENERATED_PROTOBUF_FILE ${AMADB_GENERATED_PROTOS})
       add_custom_command(TARGET amadb_protos POST_BUILD
-        COMMAND ${CMAKE_EXECUTABLE} -E copy ${GENERATED_PROTOBUF_FILE} ${AMADB_PROTO_DESTINATION}
+        COMMAND ${CMAKE_COMMAND} -E copy ${GENERATED_PROTOBUF_FILE} ${AMADB_PROTO_DESTINATION}
       )
     endforeach()
   endif()
