update CMakeLists file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ message(DEBUG "CMAKE_BUILD_AMACONTROLLER_PY_PROTO: ${CMAKE_BUILD_AMACONTROLLER_P
 message(DEBUG "CMAKE_BUILD_AMACONTROLLER_CXX_PROTO: ${CMAKE_BUILD_AMACONTROLLER_CXX_PROTO}")
 message(DEBUG "CMAKE_BUILD_AMAPROCESSOR_PROTO: ${CMAKE_BUILD_AMAPROCESSOR_PROTO}")
 
-INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
+include_directories(${PROTOBUF_INCLUDE_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 
 # generate pb2_grpc (client and server python classes) to CMAKE_CURRENT_BINARY_DIR directory
 function(protobuf_service_generate_python PY_PROTO PROTOBUF_FILES)
@@ -61,6 +61,7 @@ list(APPEND AMADB_PROTOBUF_MESSAGES
 list(APPEND AMADB_PROTOBUF_SERVICES
   amadb.proto
 )
+
 list(APPEND AMADB_PROTOBUF_FILES ${AMADB_PROTOBUF_MESSAGES} ${AMADB_PROTOBUF_SERVICES})
 
 
@@ -102,12 +103,12 @@ if(CMAKE_BUILD_AMADB_PY_PROTO OR CMAKE_BUILD_AMADB_CXX_PROTO)
     #add_dependencies(amadb_protos amadb_py_protos)
 
     # copy generated proto files to AMADB_PROTO_DESTINATION
-    if(EXISTS ${AMADB_PROTO_DESTINATION})
-      foreach(GENERATED_PROTOBUF_FILE ${AMADB_GENERATED_PROTOS})
-        add_custom_command(TARGET amadb_protos POST_BUILD
-          COMMAND ${CMAKE_COMMAND} -E copy ${GENERATED_PROTOBUF_FILE} ${AMADB_PROTO_DESTINATION})
-      endforeach()
-    endif()
+    # if(EXISTS ${AMADB_PY_PROTO_DESTINATION})
+    #   foreach(GENERATED_PROTOBUF_FILE ${AMADB_GENERATED_PY_PROTOS})
+    #     add_custom_command(TARGET amadb_py_protos POST_BUILD
+    #       COMMAND ${CMAKE_COMMAND} -E copy ${GENERATED_PROTOBUF_FILE} ${AMADB_PY_PROTO_DESTINATION})
+    #   endforeach()
+    # endif()
   endif()
 
   # if(CMAKE_BUILD_AMADB_CXX_PROTO)
