update CmakeLists (generate cxx protbuf files)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,11 +111,11 @@ if(CMAKE_BUILD_AMADB_PY_PROTO OR CMAKE_BUILD_AMADB_CXX_PROTO)
     # endif()
   endif()
 
-  # if(CMAKE_BUILD_AMADB_CXX_PROTO)
-  #   protobuf_generate_cpp(CXX_PROTO CXX_PROTO_HEADERS ${AMADB_PROTOBUF_FILES})
-  #   add_library(amadb_cxx_protos ${CXX_PROTO} ${CXX_PROTO_HEADERS})
-  #   add_dependencies(amadb_protos amadb_cxx_protos)
-  # endif()
+  if(CMAKE_BUILD_AMADB_CXX_PROTO)
+    protobuf_generate_cpp(CXX_PROTO CXX_PROTO_HEADERS ${AMADB_PROTOBUF_FILES})
+    add_library(amadb_cxx_protos ${CXX_PROTO} ${CXX_PROTO_HEADERS})
+    add_dependencies(amadb_protos amadb_cxx_protos)
+  endif()
 endif()
 
 # if(CMAKE_BUILD_AMACONTROLLER_PY_PROTO OR CMAKE_BUILD_AMACONTROLLER_CXX_PROTO)
