remove include_directories cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.5)
 
 project(amaproto
-  VERSION 1.0.0
+  VERSION 1.0.1
   DESCRIPTION "Ama-Framework protobuf definition"
   HOMEPAGE_URL https://github.com/fpolit/amaproto
 )
@@ -29,10 +29,11 @@ message(DEBUG "CMAKE_BUILD_AMACONTROLLER_PY_PROTO: ${CMAKE_BUILD_AMACONTROLLER_P
 message(DEBUG "CMAKE_BUILD_AMACONTROLLER_CXX_PROTO: ${CMAKE_BUILD_AMACONTROLLER_CXX_PROTO}")
 message(DEBUG "CMAKE_BUILD_AMAPROCESSOR_PROTO: ${CMAKE_BUILD_AMAPROCESSOR_PROTO}")
 
-INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR}
-  ${CMAKE_CURRENT_SOURCE_DIR}
-  ${CMAKE_CURRENT_BINARY_DIR}
-)
+# INCLUDE_DIRECTORIES(
+#   ${PROTOBUF_INCLUDE_DIR}
+#   ${CMAKE_CURRENT_SOURCE_DIR}
+#   ${CMAKE_CURRENT_BINARY_DIR}
+# )
 list(APPEND Protobuf_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 
 # generate pb2_grpc (client and server python classes) to CMAKE_CURRENT_BINARY_DIR directory
