copy generated python protobuf to destination

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,11 +29,6 @@ message(DEBUG "CMAKE_BUILD_AMACONTROLLER_PY_PROTO: ${CMAKE_BUILD_AMACONTROLLER_P
 message(DEBUG "CMAKE_BUILD_AMACONTROLLER_CXX_PROTO: ${CMAKE_BUILD_AMACONTROLLER_CXX_PROTO}")
 message(DEBUG "CMAKE_BUILD_AMAPROCESSOR_PROTO: ${CMAKE_BUILD_AMAPROCESSOR_PROTO}")
 
-# INCLUDE_DIRECTORIES(
-#   ${PROTOBUF_INCLUDE_DIR}
-#   ${CMAKE_CURRENT_SOURCE_DIR}
-#   ${CMAKE_CURRENT_BINARY_DIR}
-# )
 list(APPEND Protobuf_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 
 # generate pb2_grpc (client and server python classes) to CMAKE_CURRENT_BINARY_DIR directory
@@ -107,13 +102,13 @@ if(CMAKE_BUILD_AMADB_PY_PROTO OR CMAKE_BUILD_AMADB_CXX_PROTO)
       DEPENDS ${AMADB_GENERATED_PY_PROTOS})
     add_dependencies(amadb_protos amadb_py_protos)
 
-    # copy generated proto files to AMADB_PROTO_DESTINATION
-    # if(EXISTS ${AMADB_PY_PROTO_DESTINATION})
-    #   foreach(GENERATED_PROTOBUF_FILE ${AMADB_GENERATED_PY_PROTOS})
-    #     add_custom_command(TARGET amadb_py_protos POST_BUILD
-    #       COMMAND ${CMAKE_COMMAND} -E copy ${GENERATED_PROTOBUF_FILE} ${AMADB_PY_PROTO_DESTINATION})
-    #   endforeach()
-    # endif()
+    #copy generated proto files to AMADB_PROTO_DESTINATION
+    if(EXISTS ${AMADB_PY_PROTO_DESTINATION})
+      foreach(GENERATED_PROTOBUF_FILE ${AMADB_GENERATED_PY_PROTOS})
+        add_custom_command(TARGET amadb_py_protos POST_BUILD
+          COMMAND ${CMAKE_COMMAND} -E copy ${GENERATED_PROTOBUF_FILE} ${AMADB_PY_PROTO_DESTINATION})
+      endforeach()
+    endif()
   endif()
 
   if(CMAKE_BUILD_AMADB_CXX_PROTO)
@@ -138,10 +133,10 @@ if(CMAKE_BUILD_AMACONTROLLER_PY_PROTO OR CMAKE_BUILD_AMACONTROLLER_CXX_PROTO)
     add_dependencies(amacontroller_protos amacontroller_py_protos)
 
     # copy generated proto files to AMACONTROLLER_PROTO_DESTINATION
-    if(EXISTS ${AMACONTROLLER_PROTO_DESTINATION})
-      foreach(GENERATED_PROTOBUF_FILE ${AMACONTROOLLER_GENERATED_PROTOS})
-        add_custom_command(TARGET amacontroller_protos POST_BUILD
-          COMMAND ${CMAKE_COMMAND} -E copy ${GENERATED_PROTOBUF_FILE} ${AMACONTROLLER_PROTO_DESTINATION})
+    if(EXISTS ${AMACONTROLLER_PY_PROTO_DESTINATION})
+      foreach(GENERATED_PROTOBUF_FILE ${AMACONTROOLLER_GENERATED_PY_PROTOS})
+        add_custom_command(TARGET amacontroller_py_protos POST_BUILD
+          COMMAND ${CMAKE_COMMAND} -E copy ${GENERATED_PROTOBUF_FILE} ${AMACONTROLLER_PY_PROTO_DESTINATION})
       endforeach()
     endif()
   endif()
