update option.proto and module.proto

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,6 +73,7 @@ list(APPEND AMADB_PROTOBUF_FILES ${AMADB_PROTOBUF_MESSAGES} ${AMADB_PROTOBUF_SER
 # AMACONTROLLER protobuf files
 list(APPEND AMACONTROLLER_PROTOBUF_MESSAGES
   workspace.proto
+  option.proto
   module.proto
   utils.proto
   job.proto
@@ -88,6 +89,7 @@ list(APPEND AMACONTROLLER_PROTOBUF_FILES ${AMACONTROLLER_PROTOBUF_MESSAGES} ${AM
 list(APPEND AMAPROCESSOR_PROTOBUF_FILES
   utils.proto
   requests.proto
+  option.proto
   module.proto
   amaproc.proto
   hash.proto
