--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,9 +36,9 @@ message(DEBUG "CMAKE_BUILD_AMACONTROLLER_PY_PROTO: ${CMAKE_BUILD_AMACONTROLLER_P
 message(DEBUG "CMAKE_BUILD_AMACONTROLLER_CXX_PROTO: ${CMAKE_BUILD_AMACONTROLLER_CXX_PROTO}")
 message(DEBUG "CMAKE_BUILD_AMAPROCESSOR_PROTO: ${CMAKE_BUILD_AMAPROCESSOR_PROTO}")
 
-list(APPEND Protobuf_INCLUDE_DIR
-  ${CMAKE_CURRENT_SOURCE_DIR}
+INCLUDE_DIRECTORIES(
   ${Protobuf_INCLUDE_DIRS}
+  ${CMAKE_CURRENT_SOURCE_DIR}
   ${CMAKE_CURRENT_BINARY_DIR}
 )
 
