--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -128,46 +128,46 @@ if(CMAKE_BUILD_AMADB_PY_PROTO OR CMAKE_BUILD_AMADB_CXX_PROTO)
   if(CMAKE_BUILD_AMADB_CXX_PROTO)
     protobuf_generate_cpp(CXX_PROTO CXX_PROTO_HEADERS ${AMADB_PROTOBUF_FILES})
     add_library(amadb_cxx_protos SHARED ${CXX_PROTO} ${CXX_PROTO_HEADERS})
-    target_link_libraries(amadb_cxx_protos ${Protobuf_LIBRARIES})
+    target_link_libraries(amadb_cxx_protos protobuf::libprotobuf)
     add_dependencies(amadb_protos amadb_cxx_protos)
   endif()
 endif()
 
-if(CMAKE_BUILD_AMACONTROLLER_PY_PROTO OR CMAKE_BUILD_AMACONTROLLER_CXX_PROTO)
-  add_custom_target(amacontroller_protos ALL)
-  if(CMAKE_BUILD_AMACONTROLLER_PY_PROTO)
-    protobuf_generate_python(PY_PROTO ${AMACONTROLLER_PROTOBUF_MESSAGES}) # generate only message protos
-    list(APPEND AMACONTROLLER_GENERATED_PY_PROTOS ${PY_PROTO})
+# if(CMAKE_BUILD_AMACONTROLLER_PY_PROTO OR CMAKE_BUILD_AMACONTROLLER_CXX_PROTO)
+#   add_custom_target(amacontroller_protos ALL)
+#   if(CMAKE_BUILD_AMACONTROLLER_PY_PROTO)
+#     protobuf_generate_python(PY_PROTO ${AMACONTROLLER_PROTOBUF_MESSAGES}) # generate only message protos
+#     list(APPEND AMACONTROLLER_GENERATED_PY_PROTOS ${PY_PROTO})
 
-    protobuf_service_generate_python(PY_PROTO ${AMACONTROLLER_PROTOBUF_SERVICES})
-    list(APPEND AMACONTROLLER_GENERATED_PY_PROTOS ${PY_PROTO})
+#     protobuf_service_generate_python(PY_PROTO ${AMACONTROLLER_PROTOBUF_SERVICES})
+#     list(APPEND AMACONTROLLER_GENERATED_PY_PROTOS ${PY_PROTO})
 
-    message(DEBUG "AMACONTROLLER_GENERATED_PY_PROTOS: ${AMADB_GENERATED_PY_PROTOS}")
-    add_custom_target(amacontroller_py_protos ALL
-      DEPENDS ${AMACONTROLLER_GENERATED_PY_PROTOS})
-    add_dependencies(amacontroller_protos amacontroller_py_protos)
+#     message(DEBUG "AMACONTROLLER_GENERATED_PY_PROTOS: ${AMADB_GENERATED_PY_PROTOS}")
+#     add_custom_target(amacontroller_py_protos ALL
+#       DEPENDS ${AMACONTROLLER_GENERATED_PY_PROTOS})
+#     add_dependencies(amacontroller_protos amacontroller_py_protos)
 
-    # copy generated proto files to AMACONTROLLER_PROTO_DESTINATION
-    if(EXISTS ${AMACONTROLLER_PY_PROTO_DESTINATION})
-      foreach(GENERATED_PROTOBUF_FILE ${AMACONTROOLLER_GENERATED_PY_PROTOS})
-        add_custom_command(TARGET amacontroller_py_protos POST_BUILD
-          COMMAND ${CMAKE_COMMAND} -E copy ${GENERATED_PROTOBUF_FILE} ${AMACONTROLLER_PY_PROTO_DESTINATION})
-      endforeach()
-    endif()
-  endif()
+#     # copy generated proto files to AMACONTROLLER_PROTO_DESTINATION
+#     if(EXISTS ${AMACONTROLLER_PY_PROTO_DESTINATION})
+#       foreach(GENERATED_PROTOBUF_FILE ${AMACONTROOLLER_GENERATED_PY_PROTOS})
+#         add_custom_command(TARGET amacontroller_py_protos POST_BUILD
+#           COMMAND ${CMAKE_COMMAND} -E copy ${GENERATED_PROTOBUF_FILE} ${AMACONTROLLER_PY_PROTO_DESTINATION})
+#       endforeach()
+#     endif()
+#   endif()
 
-  if(CMAKE_BUILD_AMACONTROLLER_CXX_PROTO)
-    protobuf_generate_cpp(CXX_PROTO CXX_PROTO_HEADERS ${AMACONTROLLER_PROTOBUF_FILES})
-    add_library(amacontroller_cxx_protos SHARED ${CXX_PROTO} ${CXX_PROTO_HEADERS})
-    target_link_libraries(amacontroller_cxx_protos ${Protobuf_LIBRARIES})
-    add_dependencies(amacontroller_protos amacontroller_cxx_protos)
-  endif()
-endif()
+#   if(CMAKE_BUILD_AMACONTROLLER_CXX_PROTO)
+#     protobuf_generate_cpp(CXX_PROTO CXX_PROTO_HEADERS ${AMACONTROLLER_PROTOBUF_FILES})
+#     add_library(amacontroller_cxx_protos SHARED ${CXX_PROTO} ${CXX_PROTO_HEADERS})
+#     target_link_libraries(amacontroller_cxx_protos ${Protobuf_LIBRARIES})
+#     add_dependencies(amacontroller_protos amacontroller_cxx_protos)
+#   endif()
+# endif()
 
-if(CMAKE_BUILD_AMAPROCESSOR_PROTO)
-  add_custom_target(amaprocessor_protos ALL)
-  protobuf_generate_cpp(CXX_PROTO CXX_PROTO_HEADERS ${AMAPROCESSOR_PROTOBUF_FILES})
-  add_library(amaprocessor_cxx_protos SHARED ${CXX_PROTO} ${CXX_PROTO_HEADERS})
-  target_link_libraries(amaprocessor_cxx_protos ${Protobuf_LIBRARIES})
-  add_dependencies(amaprocessor_protos amaprocessor_cxx_protos)
-endif()
+# if(CMAKE_BUILD_AMAPROCESSOR_PROTO)
+#   add_custom_target(amaprocessor_protos ALL)
+#   protobuf_generate_cpp(CXX_PROTO CXX_PROTO_HEADERS ${AMAPROCESSOR_PROTOBUF_FILES})
+#   add_library(amaprocessor_cxx_protos SHARED ${CXX_PROTO} ${CXX_PROTO_HEADERS})
+#   target_link_libraries(amaprocessor_cxx_protos ${Protobuf_LIBRARIES})
+#   add_dependencies(amaprocessor_protos amaprocessor_cxx_protos)
+# endif()
